<resources>
    <string name="app_name">ScanLinks</string>
    <string name="choose_browser_title">Open websites with</string>
    <string name="choose_options_title">Options</string>
    <string name="block_with_dialog">Block, with dialog</string>
    <string name="block_without_dialog">Block, without dialog</string>
    <string name="dont_block">Don\'t block</string>
    <string name="save_text">Save</string>
    <string name="url_not_in_db_warning_text">Suppress \'Link not in Database\' warning</string>
    <string name="app_about_title">ScanLinks app for Android</string>
    <string name="app_about_version">Version</string>
    <string name="app_about_version_string">1.1.000.b</string>
    <string name="app_about_text">ScanLinks allows you to block dangerous and unsafe websites on your device. Whenever you click on a link from another app, ScanLinks will check it if it\'s safe and will block the link from opening if it\'s not</string>
    <string name="app_about_open_source_text">ScanLinks for Android is made using great open source software:</string>
    <string name="licenses_text">licenses</string>
    <string name="beta_text">beta</string>
    <string name="welcome_app_text">Hi, welcome to ScanLinks! ScanLinks protects you from websites that are designed to phish sensitive information like personal and financial details, host malware, show a lot of spam or try to install a suspicious application on your device.  ScanLinks is easy to set-up. Select the web browser you want to open websites in (if you don\'t choose one, Chrome is selected as the default browser to open websites in), select the blocking setting (block w/ dialog, block w/o dialog, or no blocking) and hit \'Save\'. When you click on a link, your device will show a dialog to select an app to handle the link, select \'ScanLinks\' and click on \'Always\' so ScanLinks can automatically handle any intent to open an URL from an external app. That\'s it!  PS: If your device does not show you a dialog box to handle the link, you can go to Default Apps settings on your phone and set \'ScanLinks\' as the default browser app. This will make sure all intents to handle an URL is passed to ScanLinks properly.</string>
    <string name="welcome_app_dialog_title">Welcome</string>
    <string name="welcome_app_dialog_positive_text">Got it</string>
    <string name="browser_not_default_dialog_title">Oops</string>
    <string name="browser_not_default_dialog_text">ScanLinks is not set as the default browser app on your phone. Please set ScanLinks as the default browser app in your device\'s Settings, otherwise ScanLinks will not be able to scan external links.</string>
    <string name="browser_not_default_dialog_positive_button">Okay</string>
    <string name="browser_not_default_dialog_negative_text">Open Default Apps settings</string>
    <string name="add_to_whitelist_dialog_title">Add to whitelist</string>
    <string name="add_to_whitelist_dialog_text">Enter a domain to add to the whitelist:</string>
    <string name="add_to_whitelist_dialog_toast_success">Successfully added</string>
    <string name="add_to_whitelist_dialog_toast_failure">Domain already exists in the whitelist</string>
    <string name="remove_from_whitelist_dialog_title">Remove from whitelist</string>
    <string name="remove_from_whitelist_dialog_text">Enter a domain to remove from the whitelist:</string>
    <string name="remove_from_whitelist_dialog_toast_success">Successfully removed</string>
    <string name="remove_from_whitelist_dialog_toast_failure">Domain does not exist in the whitelist</string>
    <string name="no_dialog_warning_toast">Link was blocked because it was unsafe</string>
    <string name="progress_dialog_title">Scanning</string>
    <string name="progress_dialog_text">Please wait while this link is being scanned...</string>
    <string name="scan_unavail_dialog_title">Scan unavailable!</string>
    <string name="scan_unavail_dialog_text">Scanning is not possible at the moment. This is either because you are not connected to the internet or the scanning service is down.  You can continue viewing this website, although it may not be safe.</string>
    <string name="scan_unavail_dialog_positive_button">Open website</string>
    <string name="scan_unavail_dialog_negative_button">Close</string>
    <string name="url_not_in_db_dialog_title">Link not in database!</string>
    <string name="url_not_in_db_dialog_text">The link you\'re trying to open is not in the scan database and is currently being analyzed.  You can continue viewing this website, although it may not be safe.</string>
    <string name="url_not_in_db_dialog_positive_button">Open website</string>
    <string name="url_not_in_db_dialog_negative_button">Close</string>
    <string name="danger_dialog_title">Danger ahead!</string>
    <string name="danger_dialog_text">This link may lead you to an unsafe website that hosts malware, tricks you into revealing sensitive information (phishing), or attempts to install a suspicious application onto your device.  It is highly recommended you do not visit this website, although you can open this website at your own risk.</string>
    <string name="danger_dialog_positive_text">Close</string>
    <string name="danger_dialog_negative_button">Open website</string>
    <string name="danger_dialog_neutral_button">View scan report</string>
    <string name="main_menu_setup_item_text">Setup instructions</string>
    <string name="main_menu_default_apps_item_text">Open Default Apps</string>
    <string name="main_menu_whitelist_item_text">Whitelist</string>
    <string name="main_menu_about_item_text">About</string>
    <string name="whitelist_menu_add_item_text">Add</string>
    <string name="whitelist_menu_remove_item_text">Remove</string>
    <string name="url_not_in_db_neutral_text">Don\'t show again</string>
</resources>
