<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="com.ssrij.urlcheck.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="62dp"
        android:text="@string/choose_browser_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_options_title"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/white"
        android:layout_below="@+id/spinner1"
        android:layout_alignStart="@+id/spinner1"
        android:layout_marginTop="86dp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/block_with_dialog"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_without_dialog"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textColor="@android:color/white" />


        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_block"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save_text" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="16dp"
        android:text="@string/url_not_in_db_warning_text"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="@android:color/white" />
</RelativeLayout>
